--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="">
 	<meta name="author" content="">
-	<title>GeoGIS Data</title>
+	<title>VinaGIT Data</title>
 	<!-- Font Montserrat -->
 	<link href="http://fonts.googleapis.com/css?family=Montserrat:300,400,400italic,500,600,700,700italic&amp;subset=latin,greek-ext,cyrillic,latin-ext,greek,cyrillic-ext,vietnamese" rel="stylesheet" type="text/css">
 	<!-- Files Style -->
@@ -19,15 +19,6 @@
 	<![endif]-->
 	<!-- Favicons --> 
 	<link rel="shortcut icon" href="images/favicon-16x16.png" type="image/x-icon" />
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-45248164-5"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-45248164-5');
-</script>
 
 </head>
 
@@ -46,7 +37,7 @@
 				</button>
 				
 				<a id="wpdesk-navbar-brand" class="navbar-brand retina" href="#">
-					<img  alt="" title="" class="img-responsive" src="images/logo-geogisdata.png" data-at2x="./images/logo-geogisdata@2.png" style="width: 100% !important;"/>
+					<img  alt="" title="" class="img-responsive" src="images/logo-VinaGITdata.png" data-at2x="./images/logo-VinaGITdata@2.png" style="width: 100% !important;"/>
 				</a>
 			</div><!-- /#wpdesk-navbar-header -->
 		
@@ -124,13 +115,13 @@
 	        <div id="slide-3" class="item">
 	          <div class="container">
 	            <!-- <h1 style="margin-top: 3%;"><b>Chúng tô cung cấp dịch vụ làm dữ liệu chính xác.</b></h1>
-	            <p>Nếu bạn có dữ liệu cần được chuẩn hóa hay bạn cần thu thập, xây dựng cơ sở dữ liệu ? <h2>Hãy nghĩ ngay đến GeoGIS Data</h2></p>
-				<p>Từ <font size="5">Data</font> trong <font size="5">GeoGIS Data</font> ngụ ý rằng bạn sẽ hài lòng với những gì mà chúng tôi sẽ thu thập, xây dựng dữ liệu cho bạn</p>
+	            <p>Nếu bạn có dữ liệu cần được chuẩn hóa hay bạn cần thu thập, xây dựng cơ sở dữ liệu ? <h2>Hãy nghĩ ngay đến VinaGIT Data</h2></p>
+				<p>Từ <font size="5">Data</font> trong <font size="5">VinaGIT Data</font> ngụ ý rằng bạn sẽ hài lòng với những gì mà chúng tôi sẽ thu thập, xây dựng dữ liệu cho bạn</p>
 	            <p><a class="btn btn-carousel" href="#">Đặt hàng ngay</a></p> -->
 				<div class="col-md-5">
 					<h2>Dịch vụ làm dữ liệu chính xác.</h2>
-					<p>Nếu bạn có dữ liệu cần được chuẩn hóa hay bạn cần thu thập, xây dựng cơ sở dữ liệu ? <h2>Hãy nghĩ ngay đến GeoGIS Data</h2></p>
-					<p>Từ <font size="5">Data</font> trong <font size="5">GeoGIS Data</font> ngụ ý rằng bạn sẽ hài lòng với những gì mà chúng tôi sẽ thu thập, xây dựng dữ liệu cho bạn.</p>
+					<p>Nếu bạn có dữ liệu cần được chuẩn hóa hay bạn cần thu thập, xây dựng cơ sở dữ liệu ? <h2>Hãy nghĩ ngay đến VinaGIT Data</h2></p>
+					<p>Từ <font size="5">Data</font> trong <font size="5">VinaGIT Data</font> ngụ ý rằng bạn sẽ hài lòng với những gì mà chúng tôi sẽ thu thập, xây dựng dữ liệu cho bạn.</p>
 					<a href="#" class="btn btn-carousel">Đặt hàng ngay</a>
 				</div><!-- .col-md-7 -->
 
@@ -366,11 +357,57 @@
 		</div><!-- /.head-section -->
 		<br />
 		<div class="row">
+
+			<div id="person_2" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
+				<img alt="" title="" class="person-avatar img-circle" src="images/persons/hang.jpg"/>
+				<h4 class="person-name">Thúy Hằng</h4>
+				<span class="person-skills">Phân tích, xử lý dữ liệu / GIS / Map / Viễn thám</span>
+				<p class="person-description">Chuyên ngành Bản đồ - Viễn thám -GIS</p>
+
+				<ul class="list-links-social">
+					<li><a href="#"><i class="icon-twitter"></i></a></li>
+					<li><a href="#"><i class="icon-facebook"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="#"><i class="icon-dribbble"></i></a></li>
+				</ul><!-- /#list-links-social -->
+			</div><!-- /#person_2 -->
+
+			<div id="person_3" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
+				<img alt="" title="" class="person-avatar img-circle" src="images/persons/kha.jpg"/>
+				<h4 class="person-name">Trần Kha</h4>
+				<span class="person-skills">Thiết kế đồ họa / GIS / Map / Viễn thám</span>
+				<p class="person-description">Chuyên ngành Bản đồ - Viễn thám -GIS</p>
+
+				<ul class="list-links-social">
+					<li><a href="#"><i class="icon-twitter"></i></a></li>
+					<li><a href="#"><i class="icon-facebook"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="#"><i class="icon-dribbble"></i></a></li>
+				</ul><!-- /#list-links-social -->
+			</div><!-- /#person_3 -->
+
+			<div id="person_4" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
+				<img alt="" title="" class="person-avatar img-circle" src="images/persons/khang.jpg"/>
+				<h4 class="person-name">Duy Khang</h4>
+				<span class="person-skills">Phát triển phần mềm, công cụ / GIS / Map / Viễn thám</span>
+				<p class="person-description">Chuyên ngành Hải dương học</p>
+
+				<ul class="list-links-social">
+					<li><a href="#"><i class="icon-twitter"></i></a></li>
+					<li><a href="#"><i class="icon-facebook"></i></a></li>
+					<li><a href="#"><i class="icon-linkedin"></i></a></li>
+					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="#"><i class="icon-dribbble"></i></a></li>
+				</ul><!-- /#list-links-social -->
+			</div><!-- /#person_4 -->
+
 			<div id="person_1" class="person col-md-3 col-xs-12 col-sm-6 col-md-3">
 				<img alt="" title="" class="person-avatar img-circle" src="images/persons/long.jpg"/>
 				<h4 class="person-name">Đỗ Thành Long</h4>
-				<span class="person-skills">Phát triển Web / Thiết kế đồ họa / GIS / Map</span>
-				<p class="person-description">Cử nhân chuyên ngành Bản đồ - Viễn thám -GIS, có kinh nghiệm trong thiết kế hệ thống Web, WebGIS</p>
+				<span class="person-skills">Phát triển Web / Database / GIS / Map / Viễn thám</span>
+				<p class="person-description">Cử nhân chuyên ngành Bản đồ - Viễn thám -GIS</p>
 
 				<ul class="list-links-social">
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
@@ -381,35 +418,22 @@
 				</ul><!-- /#list-links-social -->
 			</div><!-- /#person_1 -->
 
-			<div id="person_2" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
+			<div id="person_5" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
 				<img alt="" title="" class="person-avatar img-circle" src="images/persons/tinh.jpg"/>
 				<h4 class="person-name">Trần Chí Tình</h4>
 				<span class="person-skills">Thiết kế Web / Quản lý dự án / GIS / Map</span>
-				<p class="person-description">Cử nhân chuyên ngành Bản đồ - Viễn thám -GIS, có kinh nghiệm trong lĩnh vực quản lý dự án, có óc thẩm mỹ cao</p>
+				<p class="person-description">Chuyên ngành Bản đồ - Viễn thám -GIS</p>
 
 				<ul class="list-links-social">
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="https://www.facebook.com/chitinh1111"><i class="icon-facebook"></i></a></li>
+					<li><a href="#"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
 					<li><a href="#"><i class="icon-github"></i></a></li>
 					<li><a href="#"><i class="icon-dribbble"></i></a></li>
 				</ul><!-- /#list-links-social -->
-			</div><!-- /#person_2 -->
+			</div><!-- /#person_5 -->
 
-			<div id="person_3" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
-				<img alt="" title="" class="person-avatar img-circle" src="images/persons/tien2.jpg"/>
-				<h4 class="person-name">Trần Văn Tiến</h4>
-				<span class="person-skills">Phát triển phần mềm / Thiết kế giao diện / GIS / Map</span>
-				<p class="person-description">Cử nhân chuyên ngành Bản đồ - Viễn thám -GIS, có kinh nghiệm trong lĩnh vực lập trình ứng dụng</p>
-
-				<ul class="list-links-social">
-					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="https://www.facebook.com/tran.tien.56027"><i class="icon-facebook"></i></a></li>
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
-				</ul><!-- /#list-links-social -->
-			</div><!-- /#person_3 -->
+			
 
 			<!-- <div id="person_4" class="col-md-3 person col-xs-12 col-sm-6 col-md-3">
 				<img alt="" title="" class="person-avatar img-circle" src="images/persons/person_4.png" data-at2x="./images/persons/person_4@2.png" />
@@ -632,7 +656,7 @@
 	<!-- Footer Page -->
 	<footer id="wpdesk-footer-page" class="">
 		<div class="container">
-			<span class="copyright">© Copyright 2013. GeoGIS Data thiết kế bởi <a href="https://dothanhlong.org/">soiqualang_chentreu</a></span>
+			<span class="copyright">© Copyright 2013. VinaGIT Data thiết kế bởi <a href="https://dothanhlong.org/">soiqualang_chentreu</a></span>
 		</div><!-- /.container -->
 	</footer><!-- /#wpdesk-footer-page -->
 
