--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
 					<li><a href="https://www.facebook.com/soiqualang.chentreu"><i class="icon-facebook"></i></a></li>
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="https://github.com/soiqualang"><i class="icon-github"></i></a></li>
 					<li><a href="#"><i class="icon-dribbble"></i></a></li>
 				</ul><!-- /#list-links-social -->
 			</div><!-- /#person_1 -->
