--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				</button>
 				
 				<a id="wpdesk-navbar-brand" class="navbar-brand retina" href="#">
-					<img  alt="" title="" class="img-responsive" src="images/logo-VinaGITdata.png" data-at2x="./images/logo-VinaGITdata@2.png" style="width: 100% !important;"/>
+					<img  alt="" title="" class="img-responsive" src="images/vinagit_logo_157x27.png" data-at2x="./images/vinagit_logo_157x27.png" style="width: 100% !important;"/>
 				</a>
 			</div><!-- /#wpdesk-navbar-header -->
 		
@@ -164,8 +164,15 @@
 		<div class="container">
 			<h2>Hệ thống thông tin địa lý - GIS.</h2>
 			<p>Xuất hiện từ những thập niên 60, sự xuất hiện của công nghệ GIS đã giúp con người giải quyết các bài toán về không gian một cách hiệu quả, cung cấp thêm thông tin trực quan và sinh động cho người dùng, với khả năng kết hợp phân tích không gian và thuộc tính, GIS đã giúp con người có những phân tích và đưa ra những lựa chọn phù hợp nhất… Trên thế giới những ứng dụng GIS đã được ghi nhận trong nhiều lĩnh vực khác nhau: Địa chính, bản đồ, giao thông, y tế, cứu hỏa, bất động sản…<br>
-			<img src="images/carousel/3d_zps0d5e43ca.png" style="margin:70px auto auto auto; width:600px;" title="Mô phỏng địa hình" alt="Mô phỏng địa hình"/><br><i>Mô phỏng địa hình</i></p>
+			<img src="images/carousel/3d_zps0d5e43ca.png" class="img-responsive retina" width="100%" title="Mô phỏng địa hình" alt="Mô phỏng địa hình"/><br><i>Mô phỏng địa hình</i></p>
 		</div>
+		<!----<div class="row">
+			<div id="project_1111" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/nhatro.png">
+					<div class="content"><h5>WebGIS tìm vị trí tối ưu</h5></div>
+					<img alt="WebGIS tìm vị trí tối ưu" title="WebGIS tìm vị trí tối ưu" class="img-responsive retina" src="images/works/nhatro.png"/>
+				</a>
+			</div>-->
 	</section>
 
 	<!-- Section Services -->
@@ -204,7 +211,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-5">
-					<img src="images/carousel/trainning.jpg" style="margin:10px auto auto 40px; width:400px;" title="Hướng dẫn, đào tạo Online" alt="Hướng dẫn, đào tạo Online"/>
+					<img src="images/carousel/trainning.jpg" class="img-responsive retina" width="100%" title="Hướng dẫn, đào tạo Online" alt="Hướng dẫn, đào tạo Online"/>
 				</div>
 
 				<div class="col-md-7">
