--- a/index.html
+++ b/index.html
@@ -351,6 +351,67 @@
 				</a>
 			</div>
 		</div>
+		<div class="row">
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/thuadat2.png">
+					<div class="content"><h5>Quản lý thửa đất</h5></div>
+					<img alt="Quản lý thửa đất" title="Quản lý thửa đất" class="img-responsive retina" src="images/works/thuadat2.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/moitruong.png">
+					<div class="content"><h5>Quan trắc, IOT, môi trường</h5></div>
+					<img alt="Quan trắc, IOT, môi trường" title="Quan trắc, IOT, môi trường" class="img-responsive retina" src="images/works/moitruong.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/nongnghiep.png">
+					<div class="content"><h5>Quản lý Nông nghiệp</h5></div>
+					<img alt="Quản lý Nông nghiệp" title="Quản lý Nông nghiệp" class="img-responsive retina" src="images/works/nongnghiep.png"/>
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/dulich.png">
+					<div class="content"><h5>Ứng dụng du lịch</h5></div>
+					<img alt="Ứng dụng du lịch" title="Ứng dụng du lịch" class="img-responsive retina" src="images/works/dulich.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/dulich2.png">
+					<div class="content"><h5>Ứng dụng du lịch</h5></div>
+					<img alt="Ứng dụng du lịch" title="Ứng dụng du lịch" class="img-responsive retina" src="images/works/dulich2.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/dulich3.png">
+					<div class="content"><h5>Ứng dụng du lịch</h5></div>
+					<img alt="Ứng dụng du lịch" title="Ứng dụng du lịch" class="img-responsive retina" src="images/works/dulich3.png"/>
+				</a>
+			</div>
+		</div>
+		<div class="row">
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/nongnghiep2.png">
+					<div class="content"><h5>Quản lý Nông nghiệp</h5></div>
+					<img alt="Quản lý Nông nghiệp" title="Quản lý Nông nghiệp" class="img-responsive retina" src="images/works/nongnghiep2.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/nongnghiep3.png">
+					<div class="content"><h5>Quản lý Nông nghiệp</h5></div>
+					<img alt="Quản lý Nông nghiệp" title="Quản lý Nông nghiệp" class="img-responsive retina" src="images/works/nongnghiep3.png"/>
+				</a>
+			</div>
+			<div id="project_13" class="box-project col-xs-12 col-sm-6 col-md-4">
+				<a class="prettyPhoto" href="images/works/moitruong2.png">
+					<div class="content"><h5>Quan trắc, IOT, môi trường</h5></div>
+					<img alt="Quan trắc, IOT, môi trường" title="Quan trắc, IOT, môi trường" class="img-responsive retina" src="images/works/moitruong2.png"/>
+				</a>
+			</div>
+		</div>
 		</div><!-- /.container -->
 	</section><!-- /#section-works -->
 
